--- a/examples/gesture_recognizer/android/app/src/main/res/menu/browse.xml
+++ b/examples/gesture_recognizer/android/app/src/main/res/menu/browse.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2015 Google LLC. All rights reserved.
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,23 +14,27 @@
   limitations under the License.
   -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" >
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_show_queue"
-        android:icon="@drawable/ic_playlist_white_24dp"
-        android:title="@string/show_queue"
-        android:orderInCategory="100"
-        app:showAsAction="always" />
+            android:id="@+id/action_show_queue"
+            android:icon="@drawable/ic_playlist_white_24dp"
+            android:title="@string/show_queue"
+            android:orderInCategory="100"
+            app:showAsAction="always" />
     <item
-        android:id="@+id/media_route_menu_item"
-        android:title="@string/media_route_menu_title"
-        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
-        android:orderInCategory="101"
-        app:showAsAction="always" />
+            android:id="@+id/media_route_menu_item"
+            android:title="@string/media_route_menu_title"
+            app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
+            android:orderInCategory="101"
+            app:showAsAction="always" />
     <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+            android:id="@+id/action_settings"
+            android:title="@string/action_settings"
+            app:showAsAction="never" />
+    <item
+            android:id="@+id/action_gesture"
+            android:title="@string/action_gesture"
+            app:showAsAction="never" />
 
 </menu>
