working pause and mute.. w/ no toolbar..

--- a/examples/gesture_recognizer/android/app/src/main/res/layout/fragment_camera.xml
+++ b/examples/gesture_recognizer/android/app/src/main/res/layout/fragment_camera.xml
@@ -48,10 +48,10 @@
         app:layout_anchorGravity="top"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:background="@color/mp_color_primary"
-        app:layout_anchor="@id/recyclerview_results"
-        app:layout_anchorGravity="bottom" />
+<!--    <View-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="1dp"-->
+<!--        android:background="@color/mp_color_primary"-->
+<!--        app:layout_anchor="@id/recyclerview_results"-->
+<!--        app:layout_anchorGravity="bottom" />-->
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
