hide all controls now!  only need to remove camera so we only see overlay.. also need to make background black

--- a/examples/gesture_recognizer/android/app/src/main/res/layout/fragment_camera.xml
+++ b/examples/gesture_recognizer/android/app/src/main/res/layout/fragment_camera.xml
@@ -31,9 +31,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <include
-        android:id="@+id/bottom_sheet_layout"
-        layout="@layout/info_bottom_sheet" />
+<!--    <include-->
+<!--        android:id="@+id/bottom_sheet_layout"-->
+<!--        layout="@layout/info_bottom_sheet" />-->
 
 <!--    <androidx.recyclerview.widget.RecyclerView-->
 <!--        android:id="@+id/recyclerview_results"-->
