black background . stupid white borders, tho

--- a/examples/gesture_recognizer/android/app/src/main/res/layout/fragment_camera.xml
+++ b/examples/gesture_recognizer/android/app/src/main/res/layout/fragment_camera.xml
@@ -28,6 +28,7 @@
 
     <com.google.mediapipe.examples.gesturerecognizer.OverlayView
         android:id="@+id/overlay"
+            android:background="@color/black"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
