--- a/examples/gesture_recognizer/android/app/src/main/res/layout/fragment_camera.xml
+++ b/examples/gesture_recognizer/android/app/src/main/res/layout/fragment_camera.xml
@@ -17,6 +17,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/camera_container"
+        android:background="@color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
